[fix/#23]: 리뷰 수정